test_suite/alan-2022-examples/failing/003600_mutation.alan
source x begin if 38 then relax elsif 0 then true relax end end
